styles/index.css
/* purgecss start ignore */
@tailwind base;
body {
    background: url('../public/keyboardbg.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    -webkit-overflow-scrolling: touch;

  }

body::before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: 
      linear-gradient(
        0deg, 
      rgba(2,0,36,0.4) 0%, 
      rgba(55,30,76,0.8) 50%, 
      rgba(92,51,127,0.9) 100%
      );
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

@tailwind components;
/* purgecss end ignore */
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;900&family=Space+Mono:wght@400;700&display=swap');

body {
    background-color: #21183c;
    color: #f0e2fd;
    font-size: 16px;
    font-family: 'Nunito', sans-serif;
    letter-spacing: 0.5px;
    -webkit-overflow-scrolling: touch;
}

h1 {
    color: #ccb8fc;
    font-size:1.5rem;
    font-family: 'Space Mono', monospace;
}

h2 {
    font-size: 1.5rem;
    font-weight: 900;
    font-family: 'Nunito', sans-serif;
}

h3 {
    color: #ccb8fc;
    font-weight: 900;
    font-size: 1.3rem;
    letter-spacing: 1px;
    font-family: 'Nunito', sans-serif;
}

h4 {
    font-size: 13px;
    font-family: 'Space Mono', monospace;
    text-transform: uppercase;
}

.bolded {
    font-weight: bold;
    color: #d09aff;
}

a:link, a:visited {
    color:#f0e2fd;
}

a:hover {
    color:#ff68f9;
}


/* ======================= */
/* ===== NAV STYLES ===== */
/* ======================= */

#menu {
    height: 100vh;
}
#menu a:link, #menu a:visited {
    color:#ffccfd;
}
#menu a:hover {
    color:#ff68f9;
}

/* ======================= */
/* ===== POST STYLES ===== */
/* ======================= */

.post-style img {
    width: 75%;
    border-radius: 20px;
    margin: 1.5rem auto;
    box-shadow: 5px 10px 10px #351a4c;
}

.post-style  p {
    font-size: 1rem;
    margin: 2rem auto;
}

.post-style h2 {
    color: #ff8afa;
    margin: 2rem auto;
    text-transform: none;;
}
.post-style h3 {
    color:#d09aff;
    font-size: 1.3rem;
    font-weight: 900;
    margin: 2rem auto;
}
.post-style h4 {
    margin: 2rem auto;
}
.post-style hr {
    width: 50%;
    margin: 75px auto;
    border: solid 1px#f0e2fd;
}
.post-style a:link, a:visited {
    font-weight: 900;
}

.post-style ul {
    margin: 10px 0 10px 50px;
}

.post-style li {
    margin: 2rem 0;
    font-size: 1.2rem;
    list-style: disc;
}

.post-style li a:link, a:visited {
    color: #f0e2fd;
}
.post-style li a:hover {
    color:  #ff68f9;
    text-decoration: none;
}

.post-style blockquote{
    display: block;
    background-color: rgba(92,51,127,0.5);
    margin-left: 1rem;
    margin-bottom: 1.5rem;
    padding: 1rem ;
    border-left: solid 5px#ff8afa;
    font-size:1.5rem;
    font-style: italic;
}

.post-style pre {
    font-family: 'Space Mono', monospace;
    border: solid 1px #2a1f4c;
    border-radius: 10px; 
    box-shadow: 5px 7px 10px #351a4c;
}




@tailwind utilities;

